fix overflow

--- a/portfolio_v2.0/app/globals.css
+++ b/portfolio_v2.0/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+
+
+html{
+  scroll-behavior: smooth;
+}
+
 :root {
 
   --color-primary: #252833;
